--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.0.3
+Flask==2.2.2
+flask_cors==4.0.1
+joblib==1.2.0
 joblib==1.4.2
-numpy==2.0.0
-pandas==2.2.2
+numpy==1.24.3
+pandas==2.0.3
