--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.2.2
-flask_cors==4.0.1
-joblib==1.2.0
-joblib==1.4.2
+Flask_Cors==4.0.1
 numpy==1.24.3
 pandas==2.0.3
+python-dotenv==1.0.1
+Requests==2.32.3
+scikit_learn==1.3.0
